--- a/_posts/2023-08-25-jit.md
+++ b/_posts/2023-08-25-jit.md
@@ -6,8 +6,10 @@ categories: [web_perf]
 comments: true
 published: true
 ---
+
 JIT stands for **"Just-In-Time"** compilation, which is a technique used by some programming languages and runtime environments to improve the performance of executing code. That would make sense to a developer but for non-developer, I think the definition can be a bit confusing so let me try to explain this in a simple way. 
 
+<!--more-->
 Imagine you have a code blob written in your fav programming language (_let's say python for now_). Now Python is an **interpreted programming language**, which means that the source code is executed line by line by a Python interpreter at runtime. Your machine can only understand binary numbers so python interpreter helps bridge the gap between your python code and the machine.
 
 Due to **Python's dynamic nature** and the way it handles data types, pure interpretation can result in relatively slower execution speeds compared to languages that are compiled to machine code directly (For example C, C++) which are signficantly faster to run. For more context on how compilation works, check this [blog](https://medium.com/@bdov_/what-happens-when-you-type-gcc-main-c-a4454564e96d)
