adding YJIT blog

--- a/_posts/2023-08-25-jit.md
+++ b/_posts/2023-08-25-jit.md
@@ -60,7 +60,7 @@ We have seen the benefits of JIT in a language like python where it can help spe
 3. It doesn't do Ahead-Of-Time Compilation (AOT) like C where a program is compiled before running. It compiles the code during runtime but there is no support to pre-compile the code in advance.
 
 
-Overall, I think JIT can significantly boost the performance of your code base and if you have long running loops, you should conisder it. In Shopify, we use have seen signficant speedups in code compilation using [YJIT](https://shopify.engineering/yjit-just-in-time-compiler-cruby) which is similar to JIT.
+Overall, I think JIT can significantly boost the performance of your code base and if you have long running loops, you should conisder it. In Shopify, we use have seen signficant speedups in code compilation using [YJIT](https://shopify.engineering/yjit-just-in-time-compiler-cruby) which is similar to JIT. Check how Ruby 3.2 is YJIT ready in [this](https://shopify.engineering/ruby-yjit-is-production-ready) blog.
 
 
 For more context on JIT using pypy, check this [blog](https://realpython.com/pypy-faster-python/).
